# pyhood

./: .gitignore  404.html  BACKTEST_SUMMARY.md  CHANGELOG.md  LICENSE  RATE_LIMITS.md  README.md  SECURITY.md  STATUS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
account/: index.html
api-endpoints/: index.html
audit-trail/: index.html
authentication/: index.html
autoresearch/: index.html
backtesting/: index.html
benchmarking/: index.html
contributing/: index.html
cross-validation/: index.html
crypto/: index.html
dashboard/: app.py
dexter-analysis/: index.html
docs/: account.md  api-endpoints.md  audit-trail.md  authentication.md  backtesting.md  benchmarking.md  contributing.md  cross-validation.md  dexter-analysis.md  error-handling.md  fundamentals.md  getting-started.md  index.md  options.md  quotes.md  rate-limits.md  regime-awareness.md  screener.md  slippage.md
error-handling/: index.html
examples/: backtest_demo.py  strategy_catalog.py
fundamentals/: index.html
futures/: index.html
getting-started/: index.html
hood/: __init__.py  auth.py  client.py  http.py  models.py
ira-api-notes/: index.html
options/: index.html
overnight-runner/: index.html
pyhood/: __init__.py  auth.py  client.py  exceptions.py  fundamentals.py  http.py  models.py  screener.py  urls.py
quotes/: index.html
rate-limits/: index.html
regime-awareness/: index.html
research-memory/: index.html
screener/: index.html
scripts/: run_overnight.py
search/: search_index.json
slippage/: index.html
(+58 files in other folders)
